"After a long research, wahala 2.0"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,5 +53,15 @@
         android:text="Log Out"
         android:layout_below="@id/btnGoogleSignIn"
         android:layout_margin="16dp"/>
+
+    <Button
+        android:id="@+id/btnMarketDataButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetch Market Stats"
+        android:layout_below="@id/btnGoogleSignIn"
+        android:layout_margin="16dp"/>
+
+
 </RelativeLayout>
 
