--- a/app/src/main/res/layout/activity_market_data.xml
+++ b/app/src/main/res/layout/activity_market_data.xml
@@ -1,16 +1,15 @@
-<!-- activity_market_data.xml -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/marketDataTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
+        android:layout_centerInParent="true"
         android:textSize="16sp"
-        android:textColor="#000000"/>
-</LinearLayout>
+        android:textColor="#000000" />
+</RelativeLayout>
+
 
